// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Api handler call the correct hooks when mounting 1`] = `
Array [
  Array [
    "Request_Api_Call",
    Object {
      "keyPath": "totally-a-keypath",
      "params": undefined,
      "url": "some/url",
    },
  ],
]
`;

exports[`Api handler should be called after destroy 1`] = `
Array [
  Array [
    "Request_Api_Call",
    Object {
      "keyPath": "totally-a-keypath",
      "params": undefined,
      "requestConfig": Object {
        "baseURL": "https://api.github.com",
      },
      "url": "some/url",
    },
  ],
  Array [
    "Clear_Api_Call",
    "totally-a-keypath",
  ],
]
`;
